Attempt to fix scrollbar background issue

--- a/resource/sass/widget/_scrollbar.scss
+++ b/resource/sass/widget/_scrollbar.scss
@@ -2,6 +2,7 @@
 QScrollBar {
     border: 0;
     background: $background;
+    background-color: $background;
     margin: 0;
 }
 
